--- a/config/database.yml
+++ b/config/database.yml
@@ -20,16 +20,18 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: postgres
+  host: db
 
 development:
   <<: *default
-  database: sprout-rails_development
+  database: sprout_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: sprout-rails
+  # username: postgres
 
   # The password associated with the postgres role (username).
   #password:
@@ -37,7 +39,7 @@ development:
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
+  # host: db
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
@@ -57,7 +59,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: sprout-rails_test
+  database: sprout_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +82,6 @@ test:
 #
 production:
   <<: *default
-  database: sprout-rails_production
-  username: sprout-rails
-  password: <%= ENV['SPROUT-RAILS_DATABASE_PASSWORD'] %>
+  database: sprout_production
+  username: sprout
+  password: <%= ENV['SPROUT_DATABASE_PASSWORD'] %>
