--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   app:
-    restart: always
+    restart: unless-stopped
     build: .
     ports:
       - 3000:3000
@@ -10,7 +10,7 @@ services:
       - '.:/usr/src/app'
 
   db:
-    restart: always
+    restart: unless-stopped
     image: postgres:9.6.5-alpine
     ports:
       - 5432:5432
