--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,11 @@ services:
   app:
     restart: unless-stopped
     build: .
-    ports:
-      - 3000:3000
-    volumes:
-      - '.:/usr/src/app'
 
   db:
     restart: unless-stopped
     image: postgres:9.6.5-alpine
-    ports:
-      - 5432:5432
+
+  redis:
+      restart: unless-stopped
+      image: redis:4-alpine
