Refactor Docker build and image caching. Add Makefile to quickly run commands

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,14 @@
+# Ignore bundler config.
 /.bundle
-/tmp
+
+# Ignore all logfiles and tempfiles.
+/log/*
+/tmp/*
+!/log/.keep
+!/tmp/.keep
+
+.byebug_history
+
+setenv.*
+
+Makefile
