--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,6 +2,10 @@ version: '3.1'
 
 services:
   app:
+    image: badmuts/sprout:development
+    build:
+      context: .
+      dockerfile: Dockerfile-develop
     ports:
       - 3000:3000
     volumes:
