--- a/Dockerfile-develop
+++ b/Dockerfile-develop
@@ -4,6 +4,7 @@ RUN  apt-get update \
   && apt-get install -y --no-install-recommends \
      build-essential \
      libpq-dev \
+     git \
   && bundle config --delete frozen \
   && bundle install --with development test \
   && chown -R ruby . \
